--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,10 @@ jobs:
       run: terraform init
 
     - name: Terraform Plan
-      run: terraform plan -input=false -out=tfplan
+      run: terraform plan -out=tfplan
 
     - name: Terraform Apply
-      run: terraform apply -input=false tfplan
+      run: terraform apply -auto-approve tfplan
       continue-on-error: true
 
-    - name: Terraform Destroy
-      run: terraform destroy -auto-approve
 
