--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 'Terraform Deploy'
+name: 'Terraform D'
  
 on:
   push:
@@ -24,18 +24,21 @@ jobs:
     - name: 'Terraform Format'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'fmt'
         tf_actions_working_dir: "./terraform"
          
     - name: 'Terraform Init'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'init'
         tf_actions_working_dir: "./terraform"
          
     - name: 'Terraform Plan'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'plan'
         tf_actions_working_dir: "./terraform"
  
@@ -43,5 +46,6 @@ jobs:
       if: github.ref == 'refs/heads/main'
       uses: hashicorp/terraform-github-actions@master
       with:
+        tf_actions_version: 0.14.8
         tf_actions_subcommand: 'apply'
         tf_actions_working_dir: "./terraform"
