--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,101 +1,51 @@
-name: 'Terraform D'
- 
 on:
-  push:
-    branches:
-    - main
-  pull_request:
- 
+  release:
+    types: [published]
+    branches: [main]
+
+name: On Release Main
+
 jobs:
   terraform:
     name: 'Terraform'
+    runs-on: ubuntu-latest
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-    runs-on: ubuntu-latest
-  
-steps:
-- uses: actions/checkout@v3
-- uses: hashicorp/setup-terraform@v2
+      TF_VERSION: 1.3.6
 
-- name: Terraform fmt
-  id: fmt
-  run: terraform fmt -check
-  continue-on-error: true
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform
 
-- name: Terraform Init
-  id: init
-  run: terraform init
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-- name: Terraform Validate
-  id: validate
-  run: terraform validate -no-color
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
 
-- name: Terraform Plan
-  id: plan
-  run: terraform plan -no-color
-  continue-on-error: true
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
 
-- uses: actions/github-script@v6
-  if: github.event_name == 'pull_request'
-  env:
-    PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-  with:
-    github-token: ${{ secrets.GITHUB_TOKEN }}
-    script: |
-      // 1. Retrieve existing bot comments for the PR
-      const { data: comments } = await github.rest.issues.listComments({
-        owner: context.repo.owner,
-        repo: context.repo.repo,
-        issue_number: context.issue.number,
-      })
-      const botComment = comments.find(comment => {
-        return comment.user.type === 'Bot' && comment.body.includes('Terraform Format and Style')
-      })
+      - name: Terraform init
+        id: init
+        run: terraform init
 
-      // 2. Prepare format of the comment
-      const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-      #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-      #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
-      <details><summary>Validation Output</summary>
+      - name: Terraform validate
+        id: validate
+        run: terraform validate -no-color
 
-      \`\`\`\n
-      ${{ steps.validate.outputs.stdout }}
-      \`\`\`
+      - name: Terraform plan
+        id: plan
+        run: terraform plan -no-color
 
-      </details>
-
-      #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-
-      <details><summary>Show Plan</summary>
-
-      \`\`\`\n
-      ${process.env.PLAN}
-      \`\`\`
-
-      </details>
-
-      *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
-
-      // 3. If we have a comment, update it, otherwise create a new one
-      if (botComment) {
-        github.rest.issues.updateComment({
-          owner: context.repo.owner,
-          repo: context.repo.repo,
-          comment_id: botComment.id,
-          body: output
-        })
-      } else {
-        github.rest.issues.createComment({
-          issue_number: context.issue.number,
-          owner: context.repo.owner,
-          repo: context.repo.repo,
-          body: output
-        })
-      }
-
-
-
-      
+      - name: Terraform apply
+        id: apply
+        run: terraform apply -auto-approve
