--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,10 @@ jobs:
         id: fmt
         run: terraform fmt -check
 
+      - name: Terraform init
+        id: init
+        run: terraform init
+
       - name: Terraform validate
         id: validate
         run: terraform validate -no-color
