--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,8 @@ on:
     branches:
     - main
 
-permissions:
-  id-token: write
-  contents: read
+permissions: write-all
+
 
 name: On Release Main
 
