--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -3,8 +3,9 @@ on:
     branches:
     - main
 
-permissions: write-all
-
+permissions:
+  id-token: write
+  contents: read
 
 name: On Release Main
 
