--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,7 +20,8 @@ jobs:
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.3.6
-
+      TF_VAR_ENV: ${{ environment }}
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -46,7 +47,7 @@ jobs:
 
       - name: Terraform plan
         id: plan
-        run: terraform plan -no-color
+        run: terraform plan -no-color -var rg_name=$TF_VAR_ENV
 
       - name: Terraform apply
         id: apply
