--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,7 +20,7 @@ jobs:
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.3.6
-      TF_VAR_ENV: ${{ environment }}
+      TF_VAR_ENV: ${{ env.prod.ENV }}
     
     steps:
       - name: Checkout
