--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,7 +20,6 @@ jobs:
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.3.6
-      TF_VAR_ENV: ${{ vars.ENV }}
     
     steps:
       - name: Checkout
@@ -47,7 +46,7 @@ jobs:
 
       - name: Terraform plan
         id: plan
-        run: terraform plan -no-color -var rg_name=$TF_VAR_ENV
+        run: terraform plan -no-color -var rg_name=${{ vars.ENV }}
 
       - name: Terraform apply
         id: apply
