--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,6 +20,7 @@ jobs:
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.5.7
+      TF_VAR_ENV: ${{ vars.ENV }}
     
     steps:
       - name: Checkout
@@ -46,7 +47,7 @@ jobs:
 
       - name: Terraform plan
         id: plan
-        run: terraform plan -no-color -var rg_name=${{ vars.ENV }}
+        run: terraform plan -no-color -var rg_name=$TF_VAR_ENV
 
       - name: Terraform apply
         id: apply
