--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -7,15 +7,7 @@ permissions:
   id-token: write
   contents: read
 
-name: Dev Deployment
-    
-env:
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      TF_VERSION: 1.5.7
-      TF_VAR_ENV: ${{ vars.ENV }}
+name: Deployment Chain
 
 jobs:
  terraform:
