--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -57,6 +57,7 @@ jobs:
     name: 'Deploy to Prod'
     runs-on: ubuntu-latest
     environment: prod
+    needs: development  # Production-Job ist abhängig vom Development-Job
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
