--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -14,6 +14,9 @@ jobs:
     name: 'Deploy to Dev'
     runs-on: ubuntu-latest
     environment: dev
+    permissions:
+      id-token: write
+      contents: read
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -57,6 +60,9 @@ jobs:
     name: 'Deploy to Prod'
     runs-on: ubuntu-latest
     environment: prod
+    permissions:
+      id-token: write
+      contents: read
     needs: development  # Production-Job ist abhängig vom Development-Job
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
