--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -3,16 +3,17 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 name: Deployment Chain
 
 jobs:
- development:
+ terraform:
     name: 'Deploy to Dev'
     runs-on: ubuntu-latest
     environment: dev
-    permissions:
-      id-token: write
-      contents: read
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -52,49 +53,4 @@ jobs:
         id: apply
         run: terraform apply -auto-approve plan.tf
 
- production:
-    name: 'Deploy to Prod'
-    runs-on: ubuntu-latest
-    environment: prod
-    permissions:
-      id-token: write
-      contents: read
-    needs: development  # Production-Job ist abhängig vom Development-Job
-    env:
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      TF_VERSION: 1.3.6
-      TF_VAR_ENV: ${{ vars.ENV }}
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
-
-      - name: Terraform fmt
-        id: fmt
-        run: terraform fmt -check
-
-      - name: Terraform init
-        id: init
-        run: terraform init
-
-      - name: Terraform validate
-        id: validate
-        run: terraform validate -no-color
-
-      - name: Terraform plan
-        id: plan
-        run: terraform plan -no-color -var environment=$TF_VAR_ENV -out=plan.tf
-
-      - name: Terraform apply
-        id: apply
-        run: terraform apply -auto-approve plan.tf
+ 
