--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -1,25 +1,25 @@
 on:
   push:
     branches:
-      - 'main'
+    - 'main'
 
 permissions:
   id-token: write
   contents: read
 
-name: Deployment Chain
+name: Deployment
 
 jobs:
- terraform:
-    name: 'Deploy to Dev'
+  terraform:
+    name: 'Deployment Development'
     runs-on: ubuntu-latest
-    environment: dev
+    environment: prod
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      TF_VERSION: 1.3.6
+      TF_VERSION: 1.5.7
       TF_VAR_ENV: ${{ vars.ENV }}
     
     steps:
@@ -39,7 +39,7 @@ jobs:
 
       - name: Terraform init
         id: init
-        run: terraform init
+        run: terraform init -var environment=$TF_VAR_ENV
 
       - name: Terraform validate
         id: validate
@@ -52,5 +52,3 @@ jobs:
       - name: Terraform apply
         id: apply
         run: terraform apply -auto-approve plan.tf
-
- 
