--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -7,16 +7,15 @@ permissions:
   id-token: write
   contents: read
 
-name: Deployment
+name: Prod Deployment
 
 jobs:
-  terraform:
-    name: 'Deployment Development'
+  development:
+    name: 'Deploy Development'
     runs-on: ubuntu-latest
     environment: dev
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.5.7
@@ -39,7 +38,7 @@ jobs:
 
       - name: Terraform init
         id: init
-        run: terraform init -reconfigure
+        run: terraform init -var environment=$TF_VAR_ENV
 
       - name: Terraform validate
         id: validate
