--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -20,6 +20,10 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.3.6
       TF_VAR_ENV: ${{ vars.ENV }}
+
+    strategy:
+      matrix:
+        folder: ['dev', 'prod']
     
     steps:
       - name: Checkout
@@ -36,21 +40,17 @@ jobs:
         id: fmt
         run: terraform fmt -check
 
-      - name: Terraform init
+      - name: Terraform Init
         id: init
-        run: terraform init
+        run: terraform -chdir=${{ matrix.folder }} init
 
-      - name: Terraform validate
-        id: validate
-        run: terraform validate -no-color
-
-      - name: Terraform plan
+      - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -var environment=$TF_VAR_ENV -out=$TF_VAR_ENV.tf
+        run: terraform -chdir=${{ matrix.folder }} plan -no-color -var environment=$TF_VAR_ENV
 
-      - name: Terraform apply
+      - name: Terraform Apply
         id: apply
-        run: terraform apply -auto-approve $TF_VAR_ENV.tf
+        run: terraform -chdir=${{ matrix.folder }} apply -auto-approve
 
   production:
     name: 'Deploy Production'
@@ -79,18 +79,14 @@ jobs:
         id: fmt
         run: terraform fmt -check
 
-      - name: Terraform init
+      - name: Terraform Init
         id: init
-        run: terraform init
+        run: terraform -chdir=${{ matrix.folder }} init
 
-      - name: Terraform validate
-        id: validate
-        run: terraform validate -no-color
-
-      - name: Terraform plan
+      - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -var environment=$TF_VAR_ENV
+        run: terraform -chdir=${{ matrix.folder }} plan -no-color -var environment=$TF_VAR_ENV
 
-      - name: Terraform apply
+      - name: Terraform Apply
         id: apply
-        run: terraform apply -auto-approve
+        run: terraform -chdir=${{ matrix.folder }} apply -auto-approve
