--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -9,8 +9,6 @@ permissions:
 
 name: Prod Deployment
 
-
-
 jobs:
   development:
     name: 'Deploy Development'
@@ -23,10 +21,6 @@ jobs:
       TF_VERSION: 1.3.6
       TF_VAR_ENV: ${{ vars.ENV }}
     
-    strategy:
-      matrix:
-        folder: ['dev', 'prod']
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -42,16 +36,61 @@ jobs:
         id: fmt
         run: terraform fmt -check
 
-      - name: Terraform Init
+      - name: Terraform init
         id: init
-        run: terraform -chdir=${{ matrix.folder }} init
+        run: terraform init
 
-      - name: Terraform Plan
+      - name: Terraform validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform plan
         id: plan
-        run: terraform -chdir=${{ matrix.folder }} plan -no-color -var environment=$TF_VAR_ENV
+        run: terraform plan -no-color -var environment=$TF_VAR_ENV 
 
-      - name: Terraform Apply
+      - name: Terraform apply
         id: apply
-        run: terraform -chdir=${{ matrix.folder }} apply -auto-approve
+        run: terraform apply -auto-approve
 
-  
+  production:
+    name: 'Deploy Production'
+    runs-on: ubuntu-latest
+    needs: development
+    environment: prod
+    env:
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      TF_VERSION: 1.5.7
+      TF_VAR_ENV: ${{ vars.ENV }}
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+
+      - name: Terraform init
+        id: init
+        run: terraform init
+
+      - name: Terraform validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform plan
+        id: plan
+        run: terraform plan -no-color -var environment=$TF_VAR_ENV
+
+      - name: Terraform apply
+        id: apply
+        run: terraform apply -auto-approve
