--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -20,6 +20,11 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.3.6
       TF_VAR_ENV: ${{ vars.ENV }}
+      TF_BACKEND_CONFIG: |
+        resource_group_name   = "rg-tfstate"
+        storage_account_name  = "tfstate52343"
+        container_name        = "tfstate"
+        key                   = "dev.terraform.tfstate"
     
     steps:
       - name: Checkout
@@ -71,6 +76,11 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.5.7
       TF_VAR_ENV: ${{ vars.ENV }}
+      TF_BACKEND_CONFIG: |
+        resource_group_name   = "rg-tfstate"
+        storage_account_name  = "tfstate52343"
+        container_name        = "tfstate"
+        key                   = "prod.terraform.tfstate"
     
     steps:
       - name: Checkout
