--- a/.github/workflows/allstagescustomized.yaml
+++ b/.github/workflows/allstagescustomized.yaml
@@ -7,7 +7,7 @@ permissions:
   id-token: write
   contents: read
 
-name: Prod Deployment
+name:  Deployment
 
 jobs:
   development:
@@ -20,8 +20,7 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.3.6
       TF_VAR_ENV: ${{ vars.ENV }}
-      TF_BACKEND_CONFIG: |
-        key                   = "dev.terraform.tfstate"
+     
     
     steps:
       - name: Checkout
@@ -40,7 +39,7 @@ jobs:
 
       - name: Terraform init
         id: init
-        run: terraform init -backend-config="${TF_BACKEND_CONFIG}"
+        run: terraform init
 
       - name: Terraform validate
         id: validate
@@ -65,8 +64,7 @@ jobs:
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.5.7
       TF_VAR_ENV: ${{ vars.ENV }}
-      TF_BACKEND_CONFIG: |
-        key                   = "prod.terraform.tfstate"
+   
     
     steps:
       - name: Checkout
@@ -89,7 +87,7 @@ jobs:
 
       - name: Terraform init
         id: init
-        run: terraform init -backend-config="${TF_BACKEND_CONFIG}"
+        run: terraform init
 
       - name: Terraform validate
         id: validate
